2001-08-01  H.J. Lu <hjl@gnu.org>

	* gcc/config/mips/linux.h (ASM_OUTPUT_SOURCE_LINE): Defined.

2001-07-31  Jeff Sturm  <jsturm@one-point.com>

        * except.c (duplicate_eh_regions): Test n_array[i] for NULL.

2001-07-30  Roman Zippel  <zippel@linux-m68k.org>

	* config/m68k/m68k.md: Replace all general_operand with
	nonimmediate_operand for all destinations.
	* config/m68k/m68k.c: Include expr.h and reload.h.
	(not_sp_operand): Check nonimmediate_operand.

2001-07-30  Roman Zippel  <zippel@linux-m68k.org>

	* config/m68k/m68k.h (TARGET_SWITCHES/TARGET_OPTIONS):
	Add missing doc strings.
	* config/m68k/linux-aout.h (SUBTARGET_SWITCHES): Likewise.
	* config/m68k/linux.h (SUBTARGET_SWITCHES): Likewise.

2001-07-30  H.J. Lu <hjl@gnu.org>

	* config/mips/linux.h (CPLUSPLUS_CPP_SPEC): Add -D_GNU_SOURCE.
	(ASM_DECLARE_FUNCTION_NAME): Defined.
	(ASM_DECLARE_FUNCTION_SIZE): Likewise.
	(FUNCTION_NAME_ALREADY_DECLARED): Likewise.

2001-07-30  Janis Johnson  <janis@us.ibm.com>

	* profile.c (branch_prob): Fix .bbg info for computed gotos
	and C++ EH code.

2001-07-28  Golubev I. N.  <gin@mo.msk.ru>

	* config/i386/sco5.h (DWARF2_DEBUGGING_INFO): Define.

2001-07-27  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/install.texi (Configuration): Properly link the host
	specific instructions also when generating HTML.

2001-07-26  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* glimits.h (_MACH_MACHLIMITS_H_): Delete.

Thu Jul 26 22:01:30 2001  Denis Chertykov  <denisc@overta.ru>

	* cse.c (cse_process_notes): Replace any registers if the address
	remains valid.

2001-07-26  Rainer Orth <ro@TechFak.Uni-Bielefeld.DE>

	* Makefile.in (LIBICONV): Define.

2001-07-26  Andrew MacLeod  <amacleod@redhat.com>

	* params.def (PARAM_MAX_PENDING_LIST_LENGTH): Add parameter to 
	limit length of dependancy flush list.
	* params.h (MAX_PENDING_LIST_LENGTH): Define.
	* sched-int.h  (struct deps): Add pending_flush_length field.